Backport patches.